Add the example error message for SnaphotOperationRateExceeded

--- a/azure-cpi.html.md.erb
+++ b/azure-cpi.html.md.erb
@@ -244,6 +244,10 @@ compilation:
 
 1. Limits of Premium Storage blob snapshots
 
+  ```
+  Error 100: Unknown CPI error 'Unknown' with message 'SnaphotOperationRateExceeded (409): The rate of snapshot blob calls is exceeded.
+  ```
+
   The BOSH snapshot operation may be throttled if you do all of the following:
 
   * Use Premium Storage for the Cloud Foundry VMs.
