`gem install` docs use non-deprecated flags
--no-ri and --no-rdoc are deprecated in favor of --no-document

--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -5,7 +5,7 @@ title: BOSH Command Line Interface
 BOSH Command Line Interface (CLI) is used to interact with the Director. The CLI is written in Ruby and is distributed via `bosh_cli` gem.
 
 <pre class="terminal">
-$ gem install bosh_cli --no-ri --no-rdoc
+$ gem install bosh_cli --no-document
 </pre>
 
 <p class="note">Note: BOSH CLI requires Ruby 2+</p>
