--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -518,7 +518,7 @@ pushd rubygems-1.8.24
   ${BOSH_INSTALL_TARGET}/bin/ruby setup.rb
 popd
 
-${BOSH_INSTALL_TARGET}/bin/gem install ruby_1.9.3/bundler-1.2.1.gem --no-ri --no-rdoc
+${BOSH_INSTALL_TARGET}/bin/gem install ruby_1.9.3/bundler-1.2.1.gem --no-document
 ~~~
 
 #### <a id="pkg-script-ardo"></a> Example ardo_app packaging script ####
