--- a/packages.html.md.erb
+++ b/packages.html.md.erb
@@ -93,7 +93,7 @@ pushd rubygems-1.8.24
   ${BOSH&#95;INSTALL&#95;TARGET}/bin/ruby setup.rb
 popd
 
-${BOSH&#95;INSTALL&#95;TARGET}/bin/gem install ruby&#95;1.9.3/bundler-1.2.1.gem --no-ri --no-rdoc
+${BOSH&#95;INSTALL&#95;TARGET}/bin/gem install ruby&#95;1.9.3/bundler-1.2.1.gem --no-document
 </pre>
 
 Example script referencing pre-compiled code:
