Mention inspect release command as a tip for users

--- a/compiled-releases.html.md.erb
+++ b/compiled-releases.html.md.erb
@@ -52,3 +52,5 @@ To export a release:
 1. Run `bosh export release` command. In our example: `bosh export release uaa/6 ubuntu-trusty/3197`. If release is not already compiled it will create necessary compilation VMs and compile all packages.
 
 1. Find exported release tarball in the current directory. Compiled release tarball can be now imported into any other Director via `bosh upload release` command.
+
+1. `bosh inspect release` command can be used to get more insights about the compiled versions of a release in the director. In our example: `bosh inspect release uaa/6`.
