--- a/director-configure-blobstore.html.md.erb
+++ b/director-configure-blobstore.html.md.erb
@@ -2,7 +2,7 @@
 title: Connecting the Director to an External Postgres Database
 ---
 
-The Director stores uploaded releases, configuration files, logs and other data in a blobstore. A default DAV blobstore is sufficient for most BOSH environment; however, a highly-available external blobstore may be desired.
+The Director stores uploaded releases, configuration files, logs and other data in a blobstore. A default DAV blobstore is sufficient for most BOSH environments; however, a highly-available external blobstore may be desired.
 
 ## <a id="included"></a> Included DAV (default)
 
