--- a/disaster-recovery.html.md.erb
+++ b/disaster-recovery.html.md.erb
@@ -30,7 +30,7 @@ To enable alerts and notifications, configure your manifest as follows:
 
 1. Identify or add a notification recipient key and all required subkeys. The table lists supported recipients:
 
-    <table border="1" class="nice" >
+<table border="1" class="nice" >
   <tr>
     <th>Recipient</th>
     <th>Key</th>
@@ -41,13 +41,13 @@ To enable alerts and notifications, configure your manifest as follows:
     <td><code>email_notifications:</code></td>
     <td><code>smtp:</code>
         <br />
-            <code>from:</code>
+        <code>from:</code>
         <br />
-            <code>host:</code>
+        <code>host:</code>
         <br />
-            <code>port:</code>
+        <code>port:</code>
         <br />
-            <code>domain:</code>
+        <code>domain:</code>
         <br />
     </td>
   </tr>
@@ -69,7 +69,8 @@ To enable alerts and notifications, configure your manifest as follows:
     <td><code>cloud_watch_enabled:</code></td>
     <td><code>access_key_id:</code>
         <br />
-        <code>secret_access_key:</code></td>
+        <code>secret_access_key:</code>
+    </td>
   </tr>
 </table>
 
