--- a/terminology.html.md.erb
+++ b/terminology.html.md.erb
@@ -125,7 +125,7 @@ An orphaned disk is a persistent disk that will be garbage collected after a few
 
 ## <a id="package"></a> Package
 
-A package is part of a release. It contains vendored in sofware source and scripts to compile it. Packages can depend on other packages.
+A package is part of a release. It contains vendored in software source and scripts to compile it. Packages can depend on other packages.
 
 ## <a id="persistent-disk"></a> Persistent Disk
 
