--- a/links-properties.html.md.erb
+++ b/links-properties.html.md.erb
@@ -6,7 +6,7 @@ title: Link Properties
 
 <p class="note">Note: This feature is available with bosh-release v255.5+.</p>
 
-In addition to sharing basic networking information (name, AZ, IP, etc.) links allow to show arbitrary information via properties. Most common example is sharing a port value. From our previous example here is a `web` job that communicates with a database:
+In addition to sharing basic networking information (name, AZ, IP, etc.) links can show arbitrary information via properties. The most common example is sharing a port value. From our previous example, here is a `web` job that communicates with a database:
 
 ```yaml
 name: web
@@ -61,7 +61,7 @@ properties:
 
 Note that all properties included in the `conn` link are defined by the job itself in the `properties` section.
 
-And finally `web` job can use the port and a few other properties in its ERB templates when configuring how to connect to the database:
+And finally, the `web` job can use `port` and a few other properties in its ERB templates when configuring how to connect to the database:
 
 ```ruby
 <%%=
@@ -87,11 +87,11 @@ JSON.dump(result)
 %>
 ```
 
-Similarly to how [`p` template accessor](jobs.html#properties) provides access to the job's top level properties, `link("...").p("...)` and `link("...").if_p("...)` accessors work with properties included in the link.
+Similar to how the [`p` template accessor](jobs.html#properties) provides access to the job's top level properties, `link("...").p("...)` and `link("...").if_p("...)` accessors work with properties included in the link.
 
-`if_p` template accessor becomes very useful when trying to provide backwards compatibility around link properties as their interface changes. For example if Postgres job author decides to start including `encoding` property in the link and `web` job's author wants to continue to support older links that don't include that information, they can use `db.if_p("encoding") { ... }`.
+The `if_p` template accessor becomes very useful when trying to provide backwards compatibility around link properties as their interface changes. For example, if the Postgres job author decides to start including `encoding` property in the link and `web` job's author wants to continue to support older links that don't include that information, they can use `db.if_p("encoding") { ... }`.
 
-And finally in the above example the operator needs to configure database password to deploy these two jobs since password property doesn't have a default:
+Lastly, in the above example the operator needs to configure the database password to deploy these two jobs because the password property doesn't have a default:
 
 ```yaml
 instance_groups:
