--- a/init-vcloud.html.md.erb
+++ b/init-vcloud.html.md.erb
@@ -29,8 +29,8 @@ resource_pools:
 - name: vms
   network: private
   stemcell:
-    url: https://bosh.io/d/stemcells/bosh-vcloud-esxi-ubuntu-trusty-go_agent?v=3232.4
-    sha1: 1eda65c06cea25c3619eca0067a2d82dc100f0f4
+    url: {{ .Stemcell.UserVisibleDownloadURL }}
+    sha1: {{ .Stemcell.SHA1 }}
   cloud_properties:
     cpu: 2
     ram: 4_096
