--- a/init-vsphere.html.md.erb
+++ b/init-vsphere.html.md.erb
@@ -29,8 +29,8 @@ resource_pools:
 - name: vms
   network: private
   stemcell:
-    url: https://bosh.io/d/stemcells/bosh-vsphere-esxi-ubuntu-trusty-go_agent?v=3232.4
-    sha1: 27ec32ddbdea13e3025700206388ae5882a23c67
+    url: {{ .Stemcell.UserVisibleDownloadURL }}
+    sha1: {{ .Stemcell.SHA1 }}
   cloud_properties:
     cpu: 2
     ram: 4_096
