Fixed Typo-Manual Config of new Openstack Tenant

--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -187,7 +187,7 @@ cloud_provider:
 
         <p class="note"><strong>Note</strong>: See the <a href="http://docs.openstack.org/">OpenStack documentation</a> for help finding more information.</p>
 
-        Alternatively, you can to the following things manually as described below:
+        Alternatively, you can do the following things manually as described below:
         * Create a [Keypair](#keypair).
         * Create and configure [Security Groups](#security-groups).
         * Allocate a [floating IP address](#floating-ip).
