Document vSphere ESXi host failure & manual recovery of VMs
[#127288529](https://www.pivotaltracker.com/story/show/127288529)

Signed-off-by: Brian Cunnie <bcunnie@pivotal.io>

--- a/vsphere-vmotion-support.html.md.erb
+++ b/vsphere-vmotion-support.html.md.erb
@@ -13,4 +13,6 @@ As VMs are recreated, the CPI will move persistent disks out of VM folders so th
 ---
 [Back to Table of Contents](index.html#cpi-config)
 
+Next: [Recovery from an ESXi host failure](vsphere-esxi-host-failure.html)
+
 Previous: [Migrating from one datastore to another](vsphere-migrate-datastores.html)
