"continuously" has correct spelling

--- a/resurrector.html.md.erb
+++ b/resurrector.html.md.erb
@@ -4,7 +4,7 @@ title: Automatic repair with Resurrector
 
 The Resurrector is a plugin to the [Health Monitor](bosh-components.html#health-monitor). It's responsible for automatically recreating VMs that become inaccessible.
 
-The Resurrector continiously cross-references VMs expected to be running against the VMs that are sending heartbeats. When resurrector does not receive heartbeats for a VM for a certain period of time, it will kick off a task on the Director (scan and fix task) to try to "resurrect" that VM. The Director may do one of two things:
+The Resurrector continuously cross-references VMs expected to be running against the VMs that are sending heartbeats. When resurrector does not receive heartbeats for a VM for a certain period of time, it will kick off a task on the Director (scan and fix task) to try to "resurrect" that VM. The Director may do one of two things:
 
 - create a new VM if the old VM is missing from the IaaS
 - replace a VM if the Agent on that VM is not responding to commands
